# calc

./: .gitignore  main.py  pyproject.toml
calc/: __init__.py  __main__.py  __meta__.py  cli.py
calc/parse/: __init__.py  build_tree.py  parse_expr.py  parse_num.py  sreach_operation.py
calc/types/: __init__.py  base.py  num.py  operations.py
calc/types/operations/: __init__.py  bools.py  keywords.py  math.py  syntax.py
examples/: factorial.clg  first.clg
