[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calc"
authors = [
    {name = "Teri Anric", email = "2005ahi2005@gmail.com"},
]
description = "Libary in calculate math exepcions and mini language"
#readme = "README.rst"
requires-python = ">=3.8"
keywords = ["calculate", "math"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
#    "requests",
#    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[tool.setuptools]
package-dir = { "calc" = "calc" }


[tool.setuptools.dynamic]
version = {attr = "calc.__meta__.VERSION"}

#[project.optional-dependencies]

[project.scripts]
tcal = "calc.__main__:main"
